--- a/client/src/app/projects-overview/projects-overview.component.html
+++ b/client/src/app/projects-overview/projects-overview.component.html
@@ -1,6 +1,6 @@
 <h1> Projects Overview</h1>
 <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
+    <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
 
         <!-- Position Column -->
         <ng-container matColumnDef="position">
@@ -14,25 +14,57 @@
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
 
-        <!-- Weight Column -->
+        <!-- StartDate Column -->
         <ng-container matColumnDef="startDate">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
             <td mat-cell *matCellDef="let element"> {{element.startDate.toLocaleDateString('de')}} </td>
         </ng-container>
 
-        <!-- Symbol Column -->
+        <!-- PM Column -->
         <ng-container matColumnDef="projectManager">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Manager </th>
             <td mat-cell *matCellDef="let element"> {{element.projectManager}} </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <ng-container matColumnDef="expand">
+            <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button aria-label="expand row" (click)="(expandedElement = expandedElement === element ? null : element); $event.stopPropagation()">
+                    <mat-icon *ngIf="expandedElement !== element">keyboard_arrow_down</mat-icon>
+                    <mat-icon *ngIf="expandedElement === element">keyboard_arrow_up</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+
+        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+        <ng-container matColumnDef="expandedDetail">
+            <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplayWithExpand.length">
+                <div class="element-detail"
+                     [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                    <div class="extendedRow">
+                        <button> Open </button>
+                        <button> Delete </button>
+                    </div>
+                </div>
+            </td>
+        </ng-container>
+
+        <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr
                 mat-row
                 (click)="clickedRows.add(row)"
                 [class.demo-row-is-clicked]="clickedRows.has(row)"
                 *matRowDef="let row; columns: displayedColumns;"
-        ></tr>
+        ></tr> -->
+
+        <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
+        <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand;"
+            class="example-element-row"
+            [class.example-expanded-row]="expandedElement === element"
+            (click)="expandedElement = expandedElement === element ? null : element; clickedRows.add(element)"
+            [class.demo-row-is-clicked]="clickedRows.has(element)">
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
     </table>
 
     <mat-paginator [pageSizeOptions]="[10, 20, 30]"
