--- a/client/src/app/project-detail/project-detail.component.html
+++ b/client/src/app/project-detail/project-detail.component.html
@@ -1,4 +1,38 @@
-<h1> Projects Overview</h1>
+<div>
+    <a routerLink="/overview"> Back to Projects Overview </a>
+    <h1> Project Detail</h1>
+</div>
+<ngx-graph
+        class="chart-container"
+        [view]="[500, 200]"
+        [links]="[
+    {
+      id: 'a',
+      source: 'first',
+    target: 'second',
+      label: 'is parent of'
+    }, {
+      id: 'b',
+      source: 'first',
+      target: 'third',
+      label: 'custom label'
+    }
+  ]"
+        [nodes]="[
+    {
+      id: 'first',
+      label: 'A'
+    }, {
+      id: 'second',
+      label: 'B'
+    }, {
+      id: 'third',
+      label: 'C'
+    }
+  ]"
+>
+</ngx-graph>
+<button> Create Workpackage </button>
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
 
@@ -15,15 +49,15 @@
         </ng-container>
 
         <!-- StartDate Column -->
-        <ng-container matColumnDef="startDate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.startDate.toLocaleDateString('de')}} </td>
+        <ng-container matColumnDef="projectid">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Id </th>
+            <td mat-cell *matCellDef="let element"> {{element.projectid}} </td>
         </ng-container>
 
         <!-- PM Column -->
-        <ng-container matColumnDef="projectManager">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Manager </th>
-            <td mat-cell *matCellDef="let element"> {{element.projectManager}} </td>
+        <ng-container matColumnDef="duration">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Duration (h) </th>
+            <td mat-cell *matCellDef="let element"> {{element.duration}} </td>
         </ng-container>
 
         <ng-container matColumnDef="expand">
@@ -42,9 +76,7 @@
                 <div class="element-detail"
                      [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
                     <div class="extendedRow">
-                            <a
-                               routerLink="/detail/{{element.id}}"> <button> Open </button>
-                            </a>
+                        <button> Edit </button>
                         <button> Delete </button>
                     </div>
                 </div>
