--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,10 +1,10 @@
 /* Application-wide Styles */
 /* @import "~@angular/material/prebuilt-themes/indigo-pink.css"; */
 
-h1 {
+.mat-typography h1 {
     color: #3573b2;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 30em;
+    font-size: 28px;
     text-align: center;
 }
 h2, h3 {
@@ -51,3 +51,5 @@ body {
     margin: 30px;
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+
