--- a/client/src/app/project-detail/project-detail.component.html
+++ b/client/src/app/project-detail/project-detail.component.html
@@ -1,6 +1,16 @@
-<div>
-    <a routerLink="/overview"> Back to Projects Overview </a>
-    <h1> Project Detail</h1>
+<div class="header">
+    <a class="back-button" routerLink="/projects"> Back to Projects Overview </a>
+    <h1> Project Detail </h1>
+</div>
+<div class="project-fields">
+    <div class="project-fields-left">
+        <div class="field"> Projectname: {{project.value.name}} </div>
+        <div class="field"> Project Manager: {{project.value.projectManager}} </div>
+    </div>
+    <div class="project-fields-right">
+        <div class="field"> Start Date: {{project.value.startDate}} </div>
+        <div class="field"> End Date: </div>
+    </div>
 </div>
 <ngx-graph
         class="chart-container"
@@ -32,15 +42,11 @@
   ]"
 >
 </ngx-graph>
-<button> Create Workpackage </button>
+<div class="header">
+    <button class="new-button" [routerLink]="['new-wp']"> New Workpackage</button>
+</div>
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
-
-        <!-- Id Column -->
-        <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
-            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-        </ng-container>
 
         <!-- Name Column -->
         <ng-container matColumnDef="name">
@@ -48,16 +54,29 @@
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
 
-        <!-- StartDate Column -->
-        <ng-container matColumnDef="projectid">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Id </th>
-            <td mat-cell *matCellDef="let element"> {{element.projectid}} </td>
-        </ng-container>
 
-        <!-- PM Column -->
+        <!-- Duration Column -->
         <ng-container matColumnDef="duration">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Duration (h) </th>
             <td mat-cell *matCellDef="let element"> {{element.duration}} </td>
+        </ng-container>
+
+        <!-- StartDate Column -->
+        <ng-container matColumnDef="startDate">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
+            <td mat-cell *matCellDef="let element"> {{ convertDate(element.startDate) }} </td>
+        </ng-container>
+
+        <!-- Previous Package Column -->
+        <ng-container matColumnDef="previousPackage">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Previous Package </th>
+            <td mat-cell *matCellDef="let element"> {{element.previousPackage}} </td>
+        </ng-container>
+
+        <!-- Assignee Column -->
+        <ng-container matColumnDef="assignee">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Assignee </th>
+            <td mat-cell *matCellDef="let element"> {{element.assignee}} </td>
         </ng-container>
 
         <ng-container matColumnDef="expand">
@@ -86,12 +105,11 @@
 
         <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
         <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand;"
-            class="example-element-row"
-            [class.example-expanded-row]="expandedElement === element"
-            (click)="expandedElement = expandedElement === element ? null : element; clickedRows.add(element)"
-            [class.demo-row-is-clicked]="clickedRows.has(element)">
+            class="element-row"
+            [class.expanded-row]="expandedElement === element"
+            (click)="expandedElement = expandedElement === element ? null : element">
         </tr>
-        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+        <tr mat-row *matRowDef="let element; columns: ['expandedDetail']" class="detail-row"></tr>
     </table>
 
     <mat-paginator [pageSizeOptions]="[10, 20, 30]"
@@ -99,19 +117,3 @@
                    aria-label="Select page">
     </mat-paginator>
 </div>
-
-<div>
-    <h3>
-        Click Log
-    </h3>
-</div>
-
-<div *ngIf="!clickedRows.size">
-    Clicked rows will be logged here
-</div>
-
-<ul>
-    <li *ngFor="let clickedRow of clickedRows">
-        Clicked on {{clickedRow.name}}
-    </li>
-</ul>
