--- a/client/src/app/projects-overview/projects-overview.component.html
+++ b/client/src/app/projects-overview/projects-overview.component.html
@@ -1,85 +1,68 @@
-<h1> Projects Overview</h1>
-<div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
+<ng-container *ngIf="projects$">
 
-        <!-- Id Column -->
-        <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
-            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-        </ng-container>
+    <div class="header">
+        <h1 class="header-title"> Projects Overview</h1>
+        <button class="header-button" [routerLink]="['new']"> New Project</button>
+    </div>
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
 
-        <!-- StartDate Column -->
-        <ng-container matColumnDef="startDate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.startDate.toLocaleDateString('de')}} </td>
-        </ng-container>
+            <!-- StartDate Column -->
+            <ng-container matColumnDef="startDate">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
+                <td mat-cell *matCellDef="let element"> {{ convertDate(element.startDate) }} </td>
+            </ng-container>
 
-        <!-- PM Column -->
-        <ng-container matColumnDef="projectManager">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Manager </th>
-            <td mat-cell *matCellDef="let element"> {{element.projectManager}} </td>
-        </ng-container>
+            <!-- PM Column -->
+            <ng-container matColumnDef="projectManager">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Manager </th>
+                <td mat-cell *matCellDef="let element"> {{element.projectManager}} </td>
+            </ng-container>
 
-        <ng-container matColumnDef="expand">
-            <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
-            <td mat-cell *matCellDef="let element">
-                <button mat-icon-button aria-label="expand row" (click)="(expandedElement = expandedElement === element ? null : element); $event.stopPropagation()">
-                    <mat-icon *ngIf="expandedElement !== element">keyboard_arrow_down</mat-icon>
-                    <mat-icon *ngIf="expandedElement === element">keyboard_arrow_up</mat-icon>
-                </button>
-            </td>
-        </ng-container>
+            <ng-container matColumnDef="expand">
+                <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-icon-button aria-label="expand row" (click)="(expandedElement = expandedElement === element ? null : element); $event.stopPropagation()">
+                        <mat-icon *ngIf="expandedElement !== element">keyboard_arrow_down</mat-icon>
+                        <mat-icon *ngIf="expandedElement === element">keyboard_arrow_up</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
 
-        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-        <ng-container matColumnDef="expandedDetail">
-            <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplayWithExpand.length">
-                <div class="element-detail"
-                     [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-                    <div class="extendedRow">
-                            <a
-                               routerLink="/detail/{{element.id}}"> <button> Open </button>
-                            </a>
-                        <button> Delete </button>
+            <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+            <ng-container matColumnDef="expandedDetail">
+                <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplayWithExpand.length">
+                    <div class="element-detail"
+                         [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                        <div class="extendedRow">
+                            <button [routerLink]="['detail/', element._id]"> Open </button>
+                            <button [routerLink]="['edit/', element._id]"> Edit </button>
+                            <button (click)="deleteProject(element._id || '')"> Delete </button>
+                        </div>
                     </div>
-                </div>
-            </td>
-        </ng-container>
+                </td>
+            </ng-container>
 
 
-        <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
-        <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand;"
-            class="example-element-row"
-            [class.example-expanded-row]="expandedElement === element"
-            (click)="expandedElement = expandedElement === element ? null : element; clickedRows.add(element)"
-            [class.demo-row-is-clicked]="clickedRows.has(element)">
-        </tr>
-        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-    </table>
+            <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
+            <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand;"
+                class="element-row"
+                [class.expanded-row]="expandedElement === element"
+                (click)="expandedElement = expandedElement === element ? null : element">
+            </tr>
+            <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
 
-    <mat-paginator [pageSizeOptions]="[10, 20, 30]"
-                   showFirstLastButtons
-                   aria-label="Select page">
-    </mat-paginator>
-</div>
+        </table>
 
-<div>
-    <h3>
-        Click Log
-    </h3>
-</div>
-
-<div *ngIf="!clickedRows.size">
-    Clicked rows will be logged here
-</div>
-
-<ul>
-    <li *ngFor="let clickedRow of clickedRows">
-        Clicked on {{clickedRow.name}}
-    </li>
-</ul>
+        <mat-paginator [pageSizeOptions]="[5, 10, 15]"
+                       showFirstLastButtons
+                       aria-label="Select page">
+        </mat-paginator>
+    </div>
+</ng-container>
