Updates to Create and Delete Workpackages

--- a/client/src/app/create-workpackage/create-workpackage.component.html
+++ b/client/src/app/create-workpackage/create-workpackage.component.html
@@ -1,2 +1,2 @@
 <h1>Create Workpackage</h1>
-<app-workpackage-form (formSubmitted)="createWorkpackage($event)"></app-workpackage-form>
+<app-workpackage-form [initialState]="project" (formSubmitted)="createWorkpackage($event)"></app-workpackage-form>
