--- a/client/src/app/project-detail/project-detail.component.html
+++ b/client/src/app/project-detail/project-detail.component.html
@@ -8,38 +8,15 @@
         <div class="field"> Project Manager: {{project.value.projectManager}} </div>
     </div>
     <div class="project-fields-right">
-        <div class="field"> Start Date: {{project.value.startDate}} </div>
-        <div class="field"> End Date: </div>
+        <div class="field"> Start Date: {{ startDate }} </div>
+        <div class="field"> End Date: {{ calculatedEndDate }} </div>
     </div>
 </div>
-<ngx-graph
-        class="chart-container"
-        [view]="[500, 200]"
-        [links]="[
-    {
-      id: 'a',
-      source: 'first',
-    target: 'second',
-      label: 'is parent of'
-    }, {
-      id: 'b',
-      source: 'first',
-      target: 'third',
-      label: 'custom label'
-    }
-  ]"
-        [nodes]="[
-    {
-      id: 'first',
-      label: 'A'
-    }, {
-      id: 'second',
-      label: 'B'
-    }, {
-      id: 'third',
-      label: 'C'
-    }
-  ]"
+<ngx-graph class="chart-container"
+           [links]="graph.links"
+           [nodes]="graph.nodes"
+           [curve]="curve"
+            [view]="[500, 200]"
 >
 </ngx-graph>
 <div class="header">
@@ -49,9 +26,9 @@
     <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
 
         <!-- Name Column -->
-        <ng-container matColumnDef="name">
+        <ng-container matColumnDef="wpname">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.wpname}} </td>
         </ng-container>
 
 
@@ -95,8 +72,7 @@
                 <div class="element-detail"
                      [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
                     <div class="extendedRow">
-                        <button> Edit </button>
-                        <button> Delete </button>
+                        <button (click)="deleteWorkpackage(element)" routerLink="/projects/detail/{{project.value._id}}"> Delete </button>
                     </div>
                 </div>
             </td>
