--- a/client/src/app/workpackage-form/workpackage-form.component.html
+++ b/client/src/app/workpackage-form/workpackage-form.component.html
@@ -1,32 +1,32 @@
 <form class="project-form" autocomplete="off" [formGroup]="workpackageForm" (ngSubmit)="submitForm()">
     <div class="form-floating mb-3">
-        <input class="form-control" type="text" id="name" formControlName="name" placeholder="Workpackage Name" required>
+        <input class="form-control" type="text" id="wpname" formControlName="wpname" placeholder="Workpackage Name" required>
         <label>Name</label>
     </div>
 
-    <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
-        <div *ngIf="name.errors?.['required']">
+    <div *ngIf="wpname.invalid && (wpname.dirty ||wpname.touched)" class="alert alert-danger">
+        <div *ngIf="wpname.errors?.['required']">
             Workpackage Name is required.
         </div>
-        <div *ngIf="name.errors?.['minlength']">
+        <div *ngIf="wpname.errors?.['minlength']">
             Name must be at least 3 characters long.
         </div>
     </div>
 
     <div class="form-floating mb-3">
-        <input class="form-control" type="number" formControlName="duration" placeholder="Duration in workdays" required>
+        <input class="form-control" type="number" formControlName="durationInDays" placeholder="Duration in workdays" required>
         <label>Duration (d)</label>
     </div>
 
-    <div *ngIf="duration.invalid && (duration.dirty || duration.touched)" class="alert alert-danger">
+    <div *ngIf="durationInDays.invalid && (durationInDays.dirty || durationInDays.touched)" class="alert alert-danger">
 
-        <div *ngIf="duration.errors?.['required']">
+        <div *ngIf="durationInDays.errors?.['required']">
             Duration is required.
         </div>
     </div>
 
     <div class="form-floating mb-3">
-        <input class="form-control" type="text" formControlName="Assignee" placeholder="Name of Assignee" required>
+        <input class="form-control" type="text" formControlName="assignee" placeholder="Name of Assignee" required>
         <label>Assignee</label>
     </div>
 
@@ -38,7 +38,7 @@
     </div>
 
     <div class="buttons">
-        <a routerLink="/projects/detail/:{{id}}">
+        <a routerLink="/projects/detail/{{initialState.value._id}}">
             <button>Cancel</button>
         </a>
         <button type="submit" [disabled]="workpackageForm.invalid">Create</button>
