--- a/client/src/app/project-detail/project-detail.component.html
+++ b/client/src/app/project-detail/project-detail.component.html
@@ -16,7 +16,8 @@
            [links]="graph.links"
            [nodes]="graph.nodes"
            [curve]="curve"
-            [view]="[500, 200]"
+           [layout]="layout"
+            [view]="[500, 300]"
 >
 </ngx-graph>
 <div class="header">
@@ -34,7 +35,7 @@
 
         <!-- Duration Column -->
         <ng-container matColumnDef="duration">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Duration (h) </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Duration (d) </th>
             <td mat-cell *matCellDef="let element"> {{element.duration}} </td>
         </ng-container>
 
@@ -88,7 +89,7 @@
         <tr mat-row *matRowDef="let element; columns: ['expandedDetail']" class="detail-row"></tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[10, 20, 30]"
+    <mat-paginator [pageSizeOptions]="[5, 10, 15]"
                    showFirstLastButtons
                    aria-label="Select page">
     </mat-paginator>
